--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ datasetsforecast==0.0.8
 gluonts==0.15.1
 numpy==1.26.4
 pandas==2.2.3
-neuralforecast==3.0.0
+neuralforecast==3.1.2
 python-dotenv==1.1.0
+scipy==1.15.3
