--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-datasetsforecast==0.0.8
 gluonts==0.15.1
 numpy==1.26.4
 pandas==2.2.3
 neuralforecast==3.1.2
 python-dotenv==1.1.0
 scipy==1.15.3
+datasets==4.4.0
